fixed an overlap issue

--- a/app/assets/stylesheets/edit.scss
+++ b/app/assets/stylesheets/edit.scss
@@ -1,6 +1,61 @@
-.edit_user {
+// Please make sure to use the ".edit" prefix before
+// each tag to make them specific to the Edit Page
+
+.edit form {
     display: flex;
     justify-content: center;
     flex-direction: column;
     margin-left: 25%;
+}
+
+.edit select {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 25%;
+}
+
+.edit label {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 25%;
+}
+
+.edit i {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 25%;
+}
+
+.edit em {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 25%;
+}
+
+.edit input {
+    margin-left: 25%;
+}
+
+.edit hr {
+    width: 400px;
+    //display: flex;
+    //justify-content: center;
+    //flex-direction: column;
+    margin-left: 25%;
+}
+
+.edit p {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 25%;
+}
+
+.edit button {
+    padding-right: 0px;
 }
